# quantpulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0083a26ae0b0_initial_schema.py  80ed0da02bb9_add_option_quotes.py  a1c4f2b9d3e7_add_portfolio_variant.py  b7e1d9c05a42_add_exchange_dimension.py  c3f8a1e29b40_categorical_check_constraints.py  d5a2c9f18e63_ticker_foreign_keys.py
configs/: universe.yaml
docker/: api.Dockerfile  dagster.Dockerfile  dagster.yaml  mlflow.Dockerfile  nginx.conf  postgres-init.sql  web.Dockerfile  workspace.yaml
docs/: architecture.md  data-dictionary.md  development-history.md  roadmap.md  runbook.md
docs/adr/: 0001-record-architecture-decisions.md  0002-consolidate-two-prototypes.md  0003-orchestrator-and-stack-choices.md  0004-no-llm-question-answering-layer.md  0005-exchange-as-a-first-class-dimension.md
docs/plans/: m11-multi-market.md
src/quantpulse/: __init__.py  cli.py  config.py  reporting.py  utils.py
src/quantpulse/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
src/quantpulse/data/: __init__.py  calendar.py  cleaning.py  ingest.py  quality.py  universe.py
src/quantpulse/db/: __init__.py  base.py  models.py  session.py
src/quantpulse/features/: __init__.py  engineering.py  store.py
src/quantpulse/ml/: __init__.py  backtest.py  cv.py  metrics.py  pipeline.py  portfolio.py  promotion.py  registry.py  sensitivity.py  training.py
src/quantpulse/monitoring/: __init__.py  alerts.py  drift.py  resources.py
src/quantpulse/options/: __init__.py  ingest.py  pricing.py  quality.py  strategy.py
src/quantpulse/orchestration/: __init__.py  assets.py  catchup.py  definitions.py  transform_assets.py
tests/dagster/: test_definitions.py
tests/integration/: conftest.py  test_api.py  test_catchup.py  test_db_roundtrip.py  test_evidence_api.py  test_evidence_api_empty.py  test_feature_store.py  test_options_api.py
tests/unit/: test_alerts.py  test_backtest.py  test_calendar.py  test_capture_budget.py  test_cleaning.py  test_config.py  test_cv.py  test_drift.py  test_exchange_registry.py  test_features.py  test_ingest.py  test_market_today.py  test_metrics.py  test_options_ingest.py  test_options_pricing.py  test_options_quality.py  test_options_strategy.py  test_portfolio.py  test_post_close.py  test_promotion.py  test_quality.py  test_registry.py  test_resources.py  test_sensitivity.py  test_training.py  test_universe.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: benchmark_map.sql
transform/models/marts/: dim_universe.sql  fct_alpha_beta.sql  fct_daily_returns.sql  fct_iv_surface.sql  fct_option_summary.sql  fct_portfolio_daily.sql  fct_portfolio_vs_benchmark.sql  fct_signal_performance.sql  fct_track_record.sql  schema.yml
transform/models/staging/: schema.yml  sources.yml  stg_model_runs.sql  stg_option_quotes.sql  stg_portfolio_snapshots.sql  stg_predictions.sql  stg_prices.sql  stg_universe.sql
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: AlphaBetaCard.tsx  BenchmarkEquityChart.tsx  BookComparisonCard.tsx  ChartTooltip.tsx  DriftPanel.tsx  EquityCurveChart.tsx  ExchangePicker.tsx  FreshnessStrip.tsx  IvSkewChart.tsx  ModelHistoryTable.tsx  OptionChainTable.tsx  OptionIdeaCard.tsx  PositionsTable.tsx  PredictionsTable.tsx  PriceChart.tsx  QuintileChart.tsx  RiskCharts.tsx  StatCard.tsx  Tabs.tsx  TrackRecordCard.tsx
web/src/hooks/: useApi.ts  useExchange.ts  useHashTab.ts  useRotatingTicker.ts
web/src/lib/: format.ts
web/src/test/: AlphaBetaCard.test.tsx  BookComparisonCard.test.tsx  DriftPanel.test.tsx  ExchangePicker.test.tsx  FreshnessStrip.test.tsx  ModelHistoryTable.test.tsx  OptionIdeaCard.test.tsx  PositionsTable.test.tsx  PredictionsTable.test.tsx  QuintileChart.test.tsx  Tabs.test.tsx  TrackRecordCard.test.tsx  format.test.ts  formatMoney.test.ts  setup.ts  useHashTab.test.ts  useRotatingTicker.test.ts
