[project]
name = "quantpulse"
version = "0.1.0"
description = "Local-first MLOps platform for a self-adapting ML investing model: Dagster pipelines, MLflow registry, FastAPI serving, React dashboard."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nathan Kindo" }]
dependencies = [
    # Data & storage
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # Ingestion
    "pyyaml>=6.0",
    "yfinance>=0.2.50",
    "exchange-calendars>=4.5",
    "tenacity>=8.3",
    "httpx>=0.27",
    # ML
    "scikit-learn>=1.5",
    "lightgbm>=4.4",
    "optuna>=3.6",
    "mlflow>=2.15",
    "joblib>=1.4",
    # Monitoring
    "evidently>=0.4.30",
    # Orchestration
    "dagster>=1.8",
    "dagster-postgres>=0.24",
    # API
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pandas-stubs>=2.2",
    "types-pyyaml>=6.0",
]

[project.scripts]
quantpulse = "quantpulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantpulse"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
    "PD",  # pandas-vet
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["quantpulse"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "lightgbm.*",
    "evidently.*",
    "exchange_calendars.*",
    "joblib.*",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that need a running Postgres (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src/quantpulse"]
